--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,19 +1,32 @@
 ---
+import type { MainUrlsImp } from '@pageTypes/MainUrls';
 
+export const mainUrlsData: MainUrlsImp = {
+    "home": {title: "Home", route: "/"},
+    "about": {title: "About me with Astro", route: "/about"},
+    "blog": {title: "Astro as content manager", route: "/blog"}
+}
 ---
+
 <html lang="en">
     <head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{mainUrlsData['blog'].title}</title>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about">Who am I?</a>
-        <a href="/blog">Astro as content manager</a>
+        <a href={mainUrlsData['home'].route}>{mainUrlsData['home'].title}</a>
+        <a href={mainUrlsData['about'].route}}>{mainUrlsData['about'].title}</a>
+        <a href={mainUrlsData['blog'].route}}>{mainUrlsData['blog'].title}</a>
         <h1>A tool to post mathematical content</h1>
-        <p>It's amazing how technologies are developed to enhance user and developer experiece. Using Astro I expect to share my knowledge and opinions</p>
+        <p>It's amazing how technologies are developed to enhance user and developer experiece. Using Astro I expect to share my knowledge and opinions.</p>
+        <p>Astro is extremely powerful because of it's flexible simplicity, for example translating .md files to html for fast content creation with almost zero knowledge. For example the following post:</p>
+        <ul>
+            <li><a href="/posts/post-1">Post 1</a></li>
+            <li><a href="/posts/post-2">Post 2</a></li>
+            <li><a href="/posts/post-3">Post 3</a></li>
+        </ul>
     </body>
 </html>
