--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,7 @@
 ---
-import type { MainUrlsImp } from '@pageTypes/MainUrls';
-
-export const mainUrlsData: MainUrlsImp = {
-    "home": {title: "Home", route: "/"},
-    "about": {title: "About me with Astro", route: "/about"},
-    "blog": {title: "Astro as content manager", route: "/blog"}
-}
+import { navigatorUrls } from './../data/navigatorUrls';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <html lang="en">
@@ -14,15 +10,12 @@ export const mainUrlsData: MainUrlsImp = {
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{mainUrlsData['home'].title}</title>
+		<title>{navigatorUrls['home'].title}</title>
 	</head>
 	<body>
-        <div style="display: inline-flex; gap: 1rem;">
-            {Object.keys(mainUrlsData).map((key) => (
-                <a href={mainUrlsData[key].route}>{mainUrlsData[key].title}</a>
-            ))}
-        </div>
+        <Header />
 		<h1>Astro</h1>
 		<h1>My Astro site</h1>
+		<Footer />
 	</body>
 </html>
