Styles for Astro components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,13 @@ import Social from "./Social.astro";
 const platform = "github";
 const username = "depicted-candela";
 ---
+<style>
+  footer {
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+</style>
 
 <footer>
   <Social platform="twitter" username="depictedcandela"/>
