--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
+import '../styles/global.css';
 import { navigatorUrls } from './../data/navigatorUrls';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import Social from '../components/Social.astro';
 
 const identity: {[key:string]: string | string[]} = {
   firstName: "Nicolás",
@@ -53,7 +53,6 @@ const textCase = "uppercase";
         <ul>
             {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
-        <Social />
         <Footer />
     </body>
 </html>
