--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 import { navigatorUrls } from './../data/navigatorUrls';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
