--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,21 +1,8 @@
 ---
 import '../styles/global.css';
 import { navigatorUrls } from './../data/navigatorUrls';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-
-const identity: {[key:string]: string | string[]} = {
-  firstName: "Nicolás",
-  country: "Colombia",
-  occupation: "Geodesist",
-  hobbies: ["Software Engineering", "Poetry", "Free style"],
-};
-
-const skills = ['Java', 'HTML', 'CSS', 'Python', 'TS', 'Cloud'];
-
-const skillColor = "green";
-const fontWeight = "normal";
-const textCase = "uppercase";
+import { identity, skills } from './../data/personal'
+import BaseLayout from '../layouts/BaseLayout.astro';
 ---
 
 <html lang="en">
@@ -25,21 +12,12 @@ const textCase = "uppercase";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{navigatorUrls['about'].title}</title>
-        <style define:vars={{skillColor, fontWeight, textCase}}>
-            h1 {
-              color: purple;
-              font-size: 4rem;
-            }
-            .skill {
-              color: var(--skillColor);
-              font-weight: var(--fontWeight);
-              text-transform: var(--textCase);
-            }
-        </style>
     </head>
     <body>
-        <Header />
-		<h1>{navigatorUrls['about'].title}</h1>
+        
+    </body>
+    <BaseLayout>
+        <h1>{navigatorUrls['about'].title}</h1>
 		<h2>... and my new Astro site!</h2>
         <p>I am working for first time with Astro</p>
         <p>The web system for educational content will be there soon.</p>
@@ -53,6 +31,5 @@ const textCase = "uppercase";
         <ul>
             {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
-        <Footer />
-    </body>
+    </BaseLayout>
 </html>
