--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -78,3 +78,21 @@ h1 {
     }
 
 }
+
+/* Markdown entries */
+.image-container img {
+    width: 100%;
+    height: auto;
+}
+
+.text-overlay {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    padding: 10px;
+    font-size: 24px;
+    text-align: center;
+    border-radius: 5px;
+}
