keywords added for related posts in the place for posts

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,7 +4,8 @@ import type { MainUrlsImp } from '../types/MainUrls';
 const mainUrlsData: MainUrlsImp = {
     "home": {title: "Home", route: "/"},
     "about": {title: "About me with Astro", route: "/about"},
-    "blog": {title: "Astro as content manager", route: "/blog"}
+    "blog": {title: "Astro as content manager", route: "/blog"},
+    "tags": {title: "Categories", route: "/tags"}
 }
 ---
 <div class="nav-links" style="display: inline-flex; gap: 1rem;">
