--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,8 @@
 import '../styles/global.css';
 import { navigatorUrls } from './../data/navigatorUrls';
 import BaseLayout from '../layouts/BaseLayout.astro';
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('./posts/*.md');
 ---
 
 <html lang="en">
@@ -17,9 +19,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
         <p>It's amazing how technologies are developed to enhance user and developer experiece. Using Astro I expect to share my knowledge and opinions.</p>
         <p>Astro is extremely powerful because of it's flexible simplicity, for example translating .md files to html for fast content creation with almost zero knowledge. For example the following post:</p>
         <ul>
-            <li><a href="/posts/post-1">Post 1</a></li>
-            <li><a href="/posts/post-2">Post 2</a></li>
-            <li><a href="/posts/post-3">Post 3</a></li>
+            {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
         </ul>
     </BaseLayout>
 </html>
