--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,7 @@
 ---
+import '../styles/posts.css';
 import BaseLayout from './BaseLayout.astro';
+
 const { frontmatter } = Astro.props;
 const tags = frontmatter.tags;
 const url = frontmatter.url;
@@ -7,24 +9,6 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
 let filteredPosts = allPosts.filter((post) => post.frontmatter.tags.some((e: string) => tags.includes(e)));
 filteredPosts = filteredPosts.filter((post) => post.url != url);
 ---
-<style>
-    a {
-        color: #00539F;
-        text-decoration: none;
-    }
-    .tags {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .tag {
-        margin: 0.25em;
-        border: dotted 1px #a1a1a1;
-        border-radius: .5em;
-        padding: .5em 1em;
-        font-size: 1.15em;
-        background-color: #F8FCFD;
-    }
-</style>
 <BaseLayout pageTitle={frontmatter.title}>
     <p>Written by {frontmatter.author}</p>
     <div class="image-container">
