--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,13 +1,12 @@
 ---
 import '../styles/posts.css';
+import { getCollection } from 'astro:content';
 import BaseLayout from './BaseLayout.astro';
 
 const { frontmatter } = Astro.props;
 const tags = frontmatter.tags;
-const url = frontmatter.url;
-const allPosts = await Astro.glob('../pages/posts/*.md');
-let filteredPosts = allPosts.filter((post) => post.frontmatter.tags.some((e: string) => tags.includes(e)));
-filteredPosts = filteredPosts.filter((post) => post.url != url);
+const allPosts = await getCollection('posts');
+let filteredPosts = allPosts.filter((post) => post.data.tags.some((e: string) => tags.includes(e)));
 ---
 <BaseLayout pageTitle={frontmatter.title}>
     <p>Written by {frontmatter.author}</p>
@@ -19,7 +18,6 @@ filteredPosts = filteredPosts.filter((post) => post.url != url);
         </div>
     </div>
     <div class="tags">
-        {filteredPosts.map((post) => <p class="tag"><a href={post.url}>{post.frontmatter.title}</a></p>)}
+        {filteredPosts.map((post) => <p class="tag"><a href={`/posts/${post.slug}`}>{post.data.title}</a></p>)}
     </div>
-    <slot />
 </BaseLayout>
