--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,22 +1,14 @@
 ---
-import type { MarkdownInstance } from 'astro';
+import { getCollection } from 'astro:content';
 import BlogPost from '../../components/BlogPost.astro';
 import BaseLayout from '../../layouts/BaseLayout.astro';
 
-type DynamicRouteImp = {
-  params: {
-    tag: string;
-  }
-  props: {
-    posts: MarkdownInstance<Record<string, any>>[]
-  }
-}
 const { tag } = Astro.params;
-export async function getStaticPaths(): Promise<DynamicRouteImp[]> {
-  const allPosts = await Astro.glob('../posts/*.md');
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+export async function getStaticPaths() {
+  const allPosts = await getCollection('posts');
+  const uniqueTags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
   return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+    const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
     return {params: {tag}, props: {posts: filteredPosts}};
   });
 }
@@ -26,6 +18,6 @@ const { posts } = Astro.props;
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
   <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {posts.map((post) => <BlogPost url={`/posts/${post.slug}`} title={post.data.title} />)}
   </ul>
 </BaseLayout>
