--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,9 +1,10 @@
 ---
 import '../../styles/posts.css';
+import { getCollection } from 'astro:content';
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
-const allPosts = await Astro.glob("../posts/*.md");
-const tags = [... new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+const allPosts = await getCollection('posts');
+const tags = [... new Set(allPosts.map((post) => post.data.tags).flat())];
 const pageTitle = "Tags";
 ---
 <BaseLayout pageTitle={pageTitle}>
